# brisbane_suburbs_anki_cards

./: .gitignore  README.md  generate_anki_deck.py  plot.py  pyproject.toml  setup.py
brisbane_suburbs_anki_cards/: __init__.py  constants.py  entry.py  generate_anki_deck.py  generate_images.py  process_kml.py  suburbs.csv
