[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brisbane_suburbs_anki_cards"
version = "1.0.0"
requires-python = ">=3.12"
authors = [
  {name = "John Scolaro", email = "johnscolaro95@gmail.com"},
]
description = "A repo that generates an anki deck for suburbs around Brisbane"
readme = "README.md"
keywords = ["anki", "brisbane"]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "contextily==1.6.2",
    "genanki==0.13.1",
    "geopandas==1.0.1"
]

[project.scripts]
create-deck = "brisbane_suburbs_anki_cards.entry:main"